Atualizando Documentação e colocando rota em paralelo
