# routes/routes.js
@@ -3,32 +3,26 @@ const UserController = require("../controllers/UserController");
 const CarController = require("../controllers/CarController");
 const AuthController = require("../controllers/AuthController");
 const CarEventController = require("../controllers/CarEventController");
+const ParallelProcessController = require("../controllers/ParallelProcessController");
 const {verificar, verificarAcessoUsuario} = require('../middlewares/autenticacao');
 const routes = Router();
 
 routes.get('/', (req,res) => {
     // #swagger.tags = ['ROTA PRINCIPAL']
-    // #swagger.description = 'Uma rota que retorna um Hello World'
+    // #swagger.description = 'Uma rota que retorna informações do grupo'
 
     /* #swagger.responses[200] = {
-        schema: { mensagem: 'Hello World' },
+        schema: { mensagem: 'Projeto Final ESA - Grupo: Luca Cariolin e Raphael Vieira Alves' },
         description: 'Mensagem enviada com sucesso'
     }
-    
-      #swagger.responses[401] = {
-          schema: { mensagem: 'Não Autorizado' },
-          description: 'Rota não autorizou o acesso'
-      }
     */
     res.status(200).json({mensagem: "Projeto Final ESA - Grupo: Luca Cariolin e Raphael Vieira Alves"})
 });
 
 
-routes.get("/oiAdmin", verificar([1]), (req,res) => {
-    res.status(200).json({mensagem: "oi"});
-})
+routes.get('/processamentoparalelo', ParallelProcessController.parallelprocess);
 
-// #swagger.tags = ['User']
+
 routes.get('/users', UserController.getAll);
 routes.get('/users/getAllByName', UserController.getAllByName);
 routes.post('/user', UserController.create);
@@ -36,10 +30,10 @@ routes.get('/user/:id', UserController.getById);
 routes.put('/user/:id', verificarAcessoUsuario(), UserController.update);
 routes.delete('/user/:id', verificarAcessoUsuario(), UserController.delete);
 
-// #swagger.tags = ['Auth']
+
 routes.post('/login', AuthController.login);
 
-// #swagger.tags = ['Car']
+
 routes.get('/cars', CarController.getAll);
 routes.get('/cars/getCarsByBrand', CarController.getAllByBrand);
 routes.post('/car', verificar([2]), CarController.create);
@@ -47,7 +41,7 @@ routes.get('/car/:id', CarController.getById);
 routes.put('/car/:id', verificar([2]), CarController.update);
 routes.delete('/car/:id', verificar([2]), CarController.delete);
 
-// #swagger.tags = ['CarEvent']
+
 routes.get('/carsevents', CarEventController.getAll);
 routes.get('/carevent/:id', CarEventController.getById);
 routes.put('/carevent/:id', verificar([1]), CarEventController.update);
